16. RestAPI개념과 json placeHolder + talend api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 # 7-1. h2 DB, 웹 콘솔 접근 허용
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
+# 15-2. jdbc:h2:mem을 고정 DB URL로 설정
+# - 유니크 URL 생성 X
+spring.datasource.generate-unique-name=false
+# - 고정 URL 직접 입력
+spring.datasource.url=jdbc:h2:mem:testdb
+# 15-1. JPA 로깅 설정
+# - 디버그 레벨로 쿼리 출력
+logging.level.org.hibernate.SQL=DEBUG
+# - 쿼리 이쁘게 보여주도록 설정(format형태로 출력)
+spring.jpa.properties.hibernate.format_sql=true
+# - TRACE레벨로 바인드변수를 출력 -> 물음표 바인드변수 출력
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
