27. aop - 댓글 생성에 대해 입력값/응답값 로그 찍는 aop개발

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.defer-datasource-initialization=true
 # - 유니크 URL 생성 X
 spring.datasource.generate-unique-name=false
 # - 고정 URL 직접 입력
-#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb
 # 15-1. JPA 로깅 설정
 # - 디버그 레벨로 쿼리 출력
 logging.level.org.hibernate.SQL=DEBUG
@@ -14,12 +14,12 @@ spring.jpa.properties.hibernate.format_sql=true
 # - TRACE레벨로 바인드변수를 출력 -> 물음표 바인드변수 출력
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # PostgreSQL 연동
-spring.datasource.url=jdbc:postgresql://localhost:5432/firstproject_db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-# 초기데이터 설정(h2는 data.sql을 기본적으로 읽었었으나, 외부db일 땐, 명시)
-spring.sql.init.data-locations=classpath:/data.sql
-# 초기화를 매번 수행 always -> never
-spring.sql.init.mode=never
-# 서버가 켜질때 db생성 -> 서버꺼지면 drop하기(create-drop) -> 유지하기 update
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:postgresql://localhost:5432/firstproject_db
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+## 초기데이터 설정(h2는 data.sql을 기본적으로 읽었었으나, 외부db일 땐, 명시)
+#spring.sql.init.data-locations=classpath:/data.sql
+## 초기화를 매번 수행 always -> never
+#spring.sql.init.mode=never
+## 서버가 켜질때 db생성 -> 서버꺼지면 drop하기(create-drop) -> 유지하기 update
+#spring.jpa.hibernate.ddl-auto=update
